whigepaper constants, iframes, testing react-pdf

--- a/src/Components/Styles/StyleMain.css
+++ b/src/Components/Styles/StyleMain.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Assistant:300|Inconsolata&display=swap');
+
 .app {
     width: 100vw;
     height: 100vh;
     background: black;
+    font-family: 'Assistant';
+    color: whitesmoke;
+}
+.whitepaper{
+    background:none transparent;
 }
